Update for modern autotools

--- a/configure.ac
+++ b/configure.ac
@@ -6,7 +6,7 @@ AC_INIT([liblistserv],[1.0.4],[liblistserv@aegee.org])
 AM_INIT_AUTOMAKE([dist-bzip2 -Wall subdir-objects])
 AM_SILENT_RULES([yes])
 AC_CONFIG_SRCDIR([src/liblistserv.c])
-AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_MACRO_DIRS([m4])
 AC_DEFINE([BUILDING_LIBLISTSERV], [1], [Used to hide symbols from liblistserv.h])
 AC_USE_SYSTEM_EXTENSIONS
 AM_PROG_AR
@@ -21,7 +21,7 @@ AM_PROG_CC_C_O
 gl_VISIBILITY
 AC_CHECK_HEADERS_ONCE(pwd.h, sys/types.h, net/errno.h)
 AC_TYPE_SIZE_T
-PKG_PROG_PKG_CONFIG(0.25)
+PKG_PROG_PKG_CONFIG([0.28])
 AC_FUNC_MALLOC
 AC_HEADER_STDC
 AC_CONFIG_HEADERS([config.h])
